; ModuleID = '/home/carl/AnghaBench/zfs/module/unicode/extr_uconv.c_check_bom16.c'
source_filename = "/home/carl/AnghaBench/zfs/module/unicode/extr_uconv.c_check_bom16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UCONV_BOM_NORMAL = common dso_local global i64 0, align 8
@UCONV_IN_NAT_ENDIAN = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@UCONV_BOM_SWAPPED = common dso_local global i64 0, align 8
@UCONV_IN_REV_ENDIAN = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i64, i32*)* @check_bom16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_bom16(i64* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i64* %0, i64** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ugt i64 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %3
  %11 = load i64*, i64** %5, align 8
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @UCONV_BOM_NORMAL, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %10
  %16 = load i32, i32* @UCONV_IN_NAT_ENDIAN, align 4
  %17 = load i32*, i32** %7, align 8
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* @B_TRUE, align 4
  store i32 %18, i32* %4, align 4
  br label %31

19:                                               ; preds = %10
  %20 = load i64*, i64** %5, align 8
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @UCONV_BOM_SWAPPED, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = load i32, i32* @UCONV_IN_REV_ENDIAN, align 4
  %26 = load i32*, i32** %7, align 8
  store i32 %25, i32* %26, align 4
  %27 = load i32, i32* @B_TRUE, align 4
  store i32 %27, i32* %4, align 4
  br label %31

28:                                               ; preds = %19
  br label %29

29:                                               ; preds = %28, %3
  %30 = load i32, i32* @B_FALSE, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %24, %15
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
